Dark mode displaying fixed

--- a/src/css/general.css
+++ b/src/css/general.css
@@ -32,21 +32,3 @@ body {
 .hidden {
   display: none;
 }
-
-
-.background--dark-mode {
-
-}
-
-.text--dark-mode {
-
-}
-
-
-.elevation1--dark-mode {
-
-}
-
-.elevation2--dark-mode {
-
-}
